--- a/css/main.scss
+++ b/css/main.scss
@@ -10,7 +10,7 @@ $base-font-size-mobile:   20px;
 
 $small-font-size:  21px;
 $small-font-size-laptop:  $base-font-size-mobile; // * 0.895;
-$small-font-size-mobile:  18px;
+$small-font-size-mobile:  11px;
 $base-line-height: 1.5;
 
 $spacing-unit:     30px;
